add new static variables in test class to test new feature