@@ -1,6 +1,8 @@
 package ch.puzzle.okr.controller;
 
 import ch.puzzle.okr.dto.KeyResultDto;
+import ch.puzzle.okr.dto.KeyResultMeasureDto;
+import ch.puzzle.okr.dto.MeasureDto;
 import ch.puzzle.okr.dto.ObjectiveDto;
 import ch.puzzle.okr.mapper.KeyResultMapper;
 import ch.puzzle.okr.mapper.ObjectiveMapper;
@@ -26,6 +28,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.time.LocalDateTime;
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.Date;
 import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
@@ -51,7 +54,11 @@ class ObjectiveControllerIT {
     static ObjectiveDto objective2Dto = new ObjectiveDto(7L, "Objective 2", 1L, "Alice", "Wunderland", 1L, "Puzzle", 1L, 1, 2022, "This is a description", 20.0);
     static KeyResult keyResult1 = KeyResult.Builder.builder().withId(5L).withTitle("Keyresult 1").build();
     static KeyResult keyResult2 = KeyResult.Builder.builder().withId(7L).withTitle("Keyresult 2").build();
-    static List<KeyResult> keyResultList = Arrays.asList(keyResult1, keyResult2);
+    static MeasureDto measure1Dto = new MeasureDto(1L, 1L, 10, "foo", "boo", 1L, null);
+    static List<KeyResultMeasureDto> keyResultsMeasureList = List.of(
+            new KeyResultMeasureDto(5L, 1L, "Keyresult 1", "Description", 1L, "Paco", "Egiman", 4L, 1, 2022, ExpectedEvolution.CONSTANT, Unit.PERCENT, 20L, 100L, measure1Dto),
+            new KeyResultMeasureDto(7L, 1L, "Keyresult 2", "Description", 1L, "Robin", "Papier", 4L, 1, 2022, ExpectedEvolution.CONSTANT, Unit.PERCENT, 20L, 100L, null)
+    );
     static KeyResultDto keyresult1Dto = new KeyResultDto(5L, 1L, "Keyresult 1", "Description", 1L, "Alice", "Wunderland", 4L, 1, 2022, ExpectedEvolution.CONSTANT, Unit.PERCENT, 20L, 100L);
     static KeyResultDto keyresult2Dto = new KeyResultDto(7L, 1L, "Keyresult 2", "Description", 1L, "Alice", "Wunderland", 4L, 1, 2022, ExpectedEvolution.CONSTANT, Unit.PERCENT, 20L, 100L);
 
@@ -101,15 +108,17 @@ class ObjectiveControllerIT {
 
     @Test
     void shouldGetAllKeyResultsByObjective() throws Exception {
-        BDDMockito.given(keyResultService.getAllKeyResultsByObjective(1)).willReturn(keyResultList);
+        BDDMockito.given(keyResultService.getAllKeyResultsByObjectiveWithMeasure(1L)).willReturn(keyResultsMeasureList);
 
         mvc.perform(get("/api/v1/objectives/1/keyresults").contentType(MediaType.APPLICATION_JSON))
                 .andExpect(MockMvcResultMatchers.status().isOk())
                 .andExpect(jsonPath("$", Matchers.hasSize(2)))
                 .andExpect(jsonPath("$[0].id", Is.is(5)))
                 .andExpect(jsonPath("$[0].title", Is.is("Keyresult 1")))
+                .andExpect(jsonPath("$[0].measure.id", Is.is(1)))
                 .andExpect(jsonPath("$[1].id", Is.is(7)))
                 .andExpect(jsonPath("$[1].title", Is.is("Keyresult 2")))
+                .andExpect(jsonPath("$[1].measure", Is.is(null)))
         ;
     }
 
